--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -248,7 +248,8 @@
   volume = {52},
   pages = {792 - 804},
   doi = {10.1016/j.ijar.2011.02.002},
-  url = {http://www.sciencedirect.com/science/article/pii/S0888613X11000491}
+  note = {Reprinted as \textcite[\S 2]{2011:rinderknecht:diss}},
+  nourl = {http://www.sciencedirect.com/science/article/pii/S0888613X11000491}
 }
 
 @ARTICLE{1954:choquet,
@@ -470,7 +471,7 @@
 
 @phdthesis{2007a:cattaneo,
     Author = {M. Cattaneo},
-    School = {ETH Zurich},
+    School = {ETH Z\"urich},
     Title = {Statistical Decisions Based Directly on the Likelihood Function},
     Url = {http://dx.doi.org/10.3929/ethz-a-005463829},
     Year = 2007}
@@ -770,6 +771,14 @@
     Volume = {92},
     Year = {2005}}
 
+@ARTICLE{1993:seidenfeld,
+  author = {Seidenfeld, T. and Wasserman, L.},
+  title = {Dilation for sets of probabilities},
+  journal = {The Annals of Statistics},
+  year = {1993},
+  volume = {21},
+  pages = {1139--1154}
+}
 
 
 
