--- a/bib/other-refs.bib
+++ b/bib/other-refs.bib
@@ -573,8 +573,9 @@ url = "http://www.sciencedirect.com/science/article/pii/S0888613X12000862",
     Author = {Matthias Troffaes and Michael Goldstein},
     Booktitle = {ISIPTA '13: Proceedings of the Eighth International Symposium on Imprecise Probabilities: Theories and Applications},
     Editor = {Fabio Cozman and Thierry Denoeux and Sebastian Destercke and Teddy Seidenfeld},
-    pages = {***--***},
+    pages = {319--328},
     Title = {A Note on the Temporal Sure Preference Principle and the Updating of Lower Previsions},
+    Url = {http://www.sipta.org/isipta13/proceedings/papers/s032.pdf},
     Year = {2013}}
 
 @article{2000:dawid,
@@ -599,14 +600,15 @@ url = "http://www.sciencedirect.com/science/article/pii/S0888613X12000862",
     Author = {Francesca Mangili and Alessio Benavoli},
     Booktitle = {ISIPTA '13: Proceedings of the Eighth International Symposium on Imprecise Probabilities: Theories and Applications},
     Editor = {Fabio Cozman and Thierry Denoeux and Sebastian Destercke and Teddy Seidenfeld},
-    pages = {***--***},
+    pages = {213--222},
     Title = {New prior near-ignorance models on the simplex},
+    Url = {http://www.sipta.org/isipta13/proceedings/papers/s021.pdf},
     Year = {2013}}
 
 @phdthesis{2011:rinderknecht:diss,
     Author = {Simon Rinderknecht},
-    School = {ETH Zurich},
+    School = {ETH Z\"urich},
     Title = {Contribution to the Use of Imprecise Scientific Knowledge in Decision Support},
     Url = {http://dx.doi.org/10.3929/ethz-a-007313975}, 
-    Year = 2007}
+    Year = 2011}
 
