--- a/concluding.tex
+++ b/concluding.tex
@@ -323,7 +323,7 @@ parameters, as developed in the Neyman-Pearson setting by
 \textcite[\S~5]{2002:augustin}.
 \end{small}
 
-***new weakly informative prior models / prior near-ignorance models by Mangili \& Benavoli (ISIPTA'13)
+***new weakly informative prior models / prior near-ignorance models by Mangili \& Benavoli (ISIPTA'13) better in 3.2??***
 
 
 ***boatshape stuff: cater also for strong prior-data agreement***
