diss: minor stuff in 3.2

--- a/genbayesinf.tex
+++ b/genbayesinf.tex
@@ -525,6 +525,7 @@ consisting of all posterior distributions (represented by their density or mass 
 obtained by traditional Bayesian updating of elements of the prior credal set.
 
 \subsubsection{Relation to Bayesian Sensitivity Analysis}
+\label{sec:bayesiansensitivity}
 
 Walley's lower envelope theorem also establishes a close connection to robust Bayesian approaches and Bayesian sensitivity analysis
 \parencite[see, e.g.,][]{1994:berger, 2000:rios, 2005:ruggeri} based on sets of distributions.
