--- a/jstp.tex
+++ b/jstp.tex
@@ -111,10 +111,8 @@ strong arguments for a plurality of learning rules,%
 \textcite{2009:Coolen:Augustin}, \textcite{2007:weichselberger}, \textcite{2007a:cattaneo},
 \textcite{2007:held}, \textcite{2007:held-isipta07}, \textcite{2009:Coolen:Augustin},
 \textcite{2004:augustin:coolen}, \textcite{2003:augustin}, and Section~\ref{sec:updating}.} we
-%, Coolen and Augustin:2007, see also the debate on different concepts of
-%conditional probability: Weichselberger03, D???, F???H???})
-will strictly rely on this approach throughout ***this Section*** when we
-speak of \emph{generalised Bayesian inference}.
+will strictly rely on this approach in this contribution.
+%throughout ***this Section*** when we speak of \emph{generalised Bayesian inference}.
 
 %%\medskip
 
