--- a/setsofconjugatepriors.tex
+++ b/setsofconjugatepriors.tex
@@ -178,6 +178,7 @@ This is due to Eq.~\eqref{eq:canonicalupdate},
 which results in different ranges for $\yn$ depending on the value of $\nz$ used in the update step.%
 \footnote{This is illustrated, e.g., in Figure~\ref{fig:spot-banana}, page~\pageref{fig:spot-banana}.}
 \item Both $\nz$ and $\yz$ vary in other sets $\PZ \subset (\reals_{>0} \times \Y)$.\\
+\label{enum:generalset}%
 In this type, also in the prior parameter set the range of $\yz$ may depend on $\nz$,
 as in \textcite[\S 2.3, see Section~\ref{sec:othershapes}]{Walter2011a},
 or, vice versa, the range of $\nz$ may depend on the value of $\yz$, as in \textcite{2012:benavolizaffalon}.
