--- a/alternatives.tex
+++ b/alternatives.tex
@@ -8,11 +8,14 @@ and illustrated the main ideas and potential of generalised Bayesian inference f
 
 Now, we will briefly discuss some further approaches that could serve
 as an alternative to the sets of conjugate priors discussed in this thesis.
+%Below, we will briefly describe an interesting model class
+%that can be defined using conjugate or non-conjugate distributions 
 Firstly, in Section~\ref{sec:alternatives:conjugate} we will describe some models
 that also rely on conjugate priors in exponential families,
 but that cannot be subsumed in the framework of Section~\ref{sec:generalmodel}.
 In Section~\ref{sec:alternatives:other}, we will touch on models based on sets of priors that do not rely on conjugates.
 
+%An important approach where 
 There are models in both sections*** where, 
 instead of generating the set of prior distributions by varying their parameters in a set
 (as in Section~\ref{sec:generalmodel}),
@@ -272,7 +275,7 @@ of imprecise graphical models, also known as \emph{imprecise Bayesian} or \emph{
 especially with respect to independence concepts and efficient calculations
 \parencite[for a recent overview, see][]{itip-ipgms}.
 
-More severely, however, we find the model unsatisfactory because it offers no opportunity
+More importantly, however, we find the model unsatisfactory because it offers no opportunity
 to model posterior imprecision as a function of sample size or \pdc.
 %there seems to be no consistent mechanism by which posterior imprecision
 The model is thus inable to model prior near-ignorance, and to reflect \pdc\ in posterior inferences.%
@@ -283,34 +286,58 @@ where $c_n$ is defined such that posterior inferences also reflect \pdc.}
 
 \medskip
 
---------------------------------
+%different sorts of neighbourhood models as considered in robust Bayesian approaches \parencite[e.g.,][]{1994:berger}.
+There are of course many other models that involving*** sets of priors,
+especially in the robust Bayesian approach \parencite[see, e.g.,][]{1994:berger,2000:rios}.
+There, typically so-called \emph{neighborhood models} are considered,
+where a certain prior distribution $\p_0$ is singled out as a potential model for prior information,
+but, due to lack of confidence in this choice, a neigbourhood around $\p_0$ is considered,
+consisting of distributions `near' $\p_0$.
+The idea in the robust Bayesian approach is to ensure robustness of the Bayesian analysis based on a single prior $\p_0$,
+by checking that small deviations from $\p_0$ do not lead to large deviations in posterior inferences.
+***also called systematic sensitivity analysis***
 
-***Many other models have been investigated and applied, in particular neighborhood models
-(see, e.g., the surveys \cite{2000:bergerinsuaruggeri} and \cite{2005:ruggeri}).
+***from \textcite[\S 2.2]{itip-statinf}\\
+Imprecise probabilities offer a formal, not casuistic framework for such \emph{Bayesian sensitivity analysis},
+also containing the so-called \emph{robust Bayesian approach}.
 
-***different sorts of neighbourhood models as considered in robust Bayesian approaches \parencite[e.g.,][]{1994:berger}.
+As mentioned in Section~\ref{sec:bayesiansensitivity}, ***
+***different interpretation, statinf par***
+
+***In short, the theory of lower previsions or sets of probability distributions
+provides a formal framework for robust Bayesian inference models
+\parencite{1994:berger}.
 
 
-As an example, consider the \emph{odds-ratio model}.
-As a neighbourhood model,
-it serves to model approximate adherence to a central probability law with distribution $\p_0$,
+There are many different kinds of neighbourhood models
+(see, e.g., the surveys by \textcite{2000:bergerinsuaruggeri} and \textcite{2005:ruggeri}).
+A typical example is the $\varepsilon$-contamination class \parencite[see, e.g.,][\S 4.3.2]{1994:berger},
+which can be motivated as follows:
+In a (virtual) sample distribution,
+not all data are distributed according to $\p_0$;
+instead, %a fraction of $\varepsilon$ 
+$100\cdot\varepsilon$\% of the data is distributed according to some distribution from a set $\mathcal{Q}$, %according to some other law,
+and depending on the choice for $\mathcal{Q}$, %the class of distributions this contaminating data can follow,
+a variety of $\varepsilon$-contamination classes can be defined.
+%$100\cdot(1-\varepsilon)$\% of the data are distributed according to $\p_0$,
+%while $100\cdot\varepsilon$\% of the data are distributed according to any other distribut
+
+As another example for a neighbourhood model, consider the \emph{odds-ratio model}.
+It tries to model approximate adherence to a central probability law with distribution $\p_0$
 by giving the following constraints for pairs of events $A$ and $B$:
 \begin{align*}
 \frac{\p(A)}{\p(B)} \le (1-\epsilon)\frac{\p_0(A)}{\p_0(B)}\,,\quad A, B \subseteq \Omega
 \end{align*}
 The set of distributions $\p$ compatible with these restrictions
 forms then an odds-ratio model with parameter $\epsilon$,
-and can be represented by a lower prevision $\El_\epsilon$.
+and can be represented by a lower prevision $\El_\epsilon$.***
 When such a model is taken as an imprecise prior in Bayesian inference,
 the set of posteriors can again be expressed as an odds-ratio model
 \parencite[\S 7.2]{itip-special}.
 Other neighbourhood models, like, e.g., the $\epsilon$-contamination class
-\parencite[see, e.g.,][\S 4.3.2]{1994:berger},
+mentioned above,
+%\parencite[see, e.g.,][\S 4.3.2]{1994:berger},
 may instead not be closed under Bayesian updating.
-
-In short, the theory of lower previsions or sets of probability distributions
-provides a formal framework for robust Bayesian inference models
-\parencite{1994:berger}.
 
 \medskip
 
@@ -354,9 +381,10 @@ because posteriors derived from non-conjugate priors are very often intractable 
 
 \medskip
 
-****par on what's next***
-
-
-
-
+After having reviewed some models in alternative to the model framework from Section~\ref{sec:generalmodel},
+we will study some examples for models from this framework in more detail.
+Section~\ref{sec:jstp} discusses models of type~\ref{enum:rectangular} (p.~\pageref{enum:rectangular}),
+and a software implementation is briefly described in Section~\ref{sec:luck}.
+Section~\ref{sec:isipta11} then presents a model of type~\ref{enum:generalset} (p.~\pageref{enum:generalset}),
+along with a fundamentally different approach that combines (posterior) inferences from two different models.
 
